--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,15 @@
             "email": "pardanaud.j@gmail.com"
         }
     ],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/Feniksss/rialto"
+        }
+    ],
     "require": {
         "php": ">=7.1",
-        "nesk/rialto": "^1.2.0",
+        "nesk/rialto": "dev-update-1 as 1.3.0",
         "psr/log": "^1.0",
         "vierbergenlars/php-semver": "^3.0.2"
     },
