--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     ],
     "require": {
         "php": ">=7.1",
-        "nesk/rialto": "dev-update-1 as 1.3.0",
+        "nesk/rialto": "dev-update-1",
         "psr/log": "^1.0",
         "vierbergenlars/php-semver": "^3.0.2"
     },
